Second hot fix for offcentered icon

--- a/app/assets/src/scss/style.scss
+++ b/app/assets/src/scss/style.scss
@@ -1,4 +1,4 @@
-body {
+  body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
@@ -102,11 +102,17 @@ a.btn-large.add-to-tweetbot:not(.no-hover):hover {
   .col.s12.margin-bottom {
     margin-bottom:20px;
   }
+  nav ul.side-nav form label i {
+    line-height: 56px;
+  }
 }
 
 
 @media only screen and (min-width: 601px) {
   .col.s12.margin-bottom {
     margin-bottom: 0px;
+  }
+  nav ul.side-nav form label i {
+    line-height: 100px;
   }
 }
